# RayTracingByTheBook

./: CMakeLists.txt
applications/: CMakeLists.txt  imgui_sfml_example.cc  launch_gui.cc  pixel_speed.cc  scribble_example.cc  simple_sphere.cc
cmake/: FindEigen.cmake  FindOpenImageIO.cmake  FindRapidXML.cmake
libraries/: CMakeLists.txt
libraries/RapidXML/: manual.html
libraries/cereal/: CMakeLists.txt
libraries/cereal/include/cereal/types/: atomic.hpp  optional.hpp  variant.hpp
libraries/imgui/: CMakeLists.txt  imconfig.h  test.cpp
src/raytracer/: CMakeLists.txt
src/raytracer/gui/: drawable_image.cc  drawable_image.h  image.h  main_window.cc  main_window.h  raytracer_application.cc  raytracer_application.h  render_display.cc  render_display.h
src/raytracer/gui/example/: main_window.cc  main_window.h  scribble_area.cc  scribble_area.h
src/raytracer/image/: image.cc  image.h  saturation_conversions.h  tone_generator.h
src/raytracer/io/: image_io.h  pgm_io.cc  pgm_io.h
src/raytracer/math/: ray.h  utils.h
src/raytracer/math/concepts/: color.h  direction.h  point.h  ray.h
src/raytracer/math/transformations/: look_at.cc  look_at.h  null_transform.h  rotation.h  transform.h  translation.h
src/raytracer/scene_objects/: abstract_object.h  scene_graph.h  void_object.h
src/raytracer/scene_objects/cameras/: abstract_camera.cc  abstract_camera.h  orthographic_camera.h  projective_camera.h
src/raytracer/scene_objects/geometry/: abstract_geometry.h  finite_plane.cc  finite_plane.h  infinite_plane.cc  infinite_plane.h  sphere.cc  sphere.h  triangle.cc  triangle.h
src/raytracer/shaders/: abstract_shader.cc  abstract_shader.h  default_shader.h  flat_shader.h  shading_data.h
src/raytracer/tracers/: abstract_tracer.h
src/raytracer/utilities/: utility_types.h  vector_types.h
